--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
 
     <!-- Navigation Bar -->
         <nav> 
-            <a>Home</a>
-            <a>About</a>
-            <a>Portfolio</a>
+            <a href="index.html" id="home">Home</a>
+            <a href="about.html" id="about">About</a>
+            <a href="portfolio.html" id="portfolio">Portfolio</a>
         </nav>
 
     <!-- Home Page -->
         <h1> Raina Bethea </h1>
         <img src="images/fav pic! copy.jpeg">
         <!-- Mission Statement -->
-        <h2>Feel the fear, and <em>DO IT ANYWAY!</em></h2>
+        <h2>Feel the fear, and <strong>DO IT ANYWAY!</strong></h2>
 
 
     </body>
