css styling for all pages

--- a/about.html
+++ b/about.html
@@ -1,41 +1,48 @@
 <html>
     <head>
         <title>About</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
+        <!-- nav bar -->
+        <nav> 
+            <a href="index.html" id="home">Home</a>
+            <a class="active" href="about.html" id="about">About</a>
+            <a href="portfolio.html" id="portfolio">Portfolio</a>
+        </nav>
+
         <h1>Get To Know Me</h1>
 <!-- Things I'm Passionate About -->
         <h2>Passion Projects</h2>
-
-
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vel mauris in libero hendrerit finibus. Fusce id neque tincidunt, viverra lacus quis, posuere erat. Sed id quam dui. Vestibulum luctus, ante eu aliquet consequat, felis magna maximus dui, ac feugiat elit purus nec tellus.</p>
 <!-- Hobbies -->
-        <h2>If I'm not at work you can probably find me</h2>
+        <h2>If I'm not at work you can probably find me:</h2>
             
         <div id="hiking">
             <h3>Hiking</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vel mauris in libero hendrerit finibus. Fusce id neque tincidunt, viverra lacus quis, posuere erat. Sed id quam dui. Vestibulum luctus, ante eu aliquet consequat, felis magna maximus dui, ac feugiat elit purus nec tellus.</p>
-                <img>
+                <img src="images/hiking.jpg" id="hikingpic">
         </div>
         <div id="puzzles">
             <h3>Doing Puzzles</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vel mauris in libero hendrerit finibus. Fusce id neque tincidunt, viverra lacus quis, posuere erat. Sed id quam dui. Vestibulum luctus, ante eu aliquet consequat, felis magna maximus dui, ac feugiat elit purus nec tellus.</p>
-                <img>
+                <img src="images/puzzles.jpg" id="puzzlespic">
         </div>
         <div id="shopping">
             <h3>Shopping</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vel mauris in libero hendrerit finibus. Fusce id neque tincidunt, viverra lacus quis, posuere erat. Sed id quam dui. Vestibulum luctus, ante eu aliquet consequat, felis magna maximus dui, ac feugiat elit purus nec tellus.</p>
-                <img>
+                <img src="images/shopping.jpg" id="shoppingpic">
         </div>
         <div id="pinterest">
             <h3>Scrolling On Pinterest</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vel mauris in libero hendrerit finibus. Fusce id neque tincidunt, viverra lacus quis, posuere erat. Sed id quam dui. Vestibulum luctus, ante eu aliquet consequat, felis magna maximus dui, ac feugiat elit purus nec tellus.</p>
-                <img>
+                <img src="images/pinterest.png" id="pinpic">
         </div>
         <div id="napping">
             <h3><strong>Napping!</strong></h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vel mauris in libero hendrerit finibus. Fusce id neque tincidunt, viverra lacus quis, posuere erat. Sed id quam dui. Vestibulum luctus, ante eu aliquet consequat, felis magna maximus dui, ac feugiat elit purus nec tellus.</p>
-                <img>
+                <img src="images/napping.jpg" id="nappingpic">
         </div>
 <!-- Skills -->
         <div id="Skills">
