--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <html>
     <head>
         <title>Raina's Personal Website</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
 
     <!-- Navigation Bar -->
         <nav> 
-            <a href="index.html" id="home">Home</a>
+            <a class= "active" href="index.html" id="home">Home</a>
             <a href="about.html" id="about">About</a>
             <a href="portfolio.html" id="portfolio">Portfolio</a>
         </nav>
 
     <!-- Home Page -->
         <h1> Raina Bethea </h1>
-        <img src="images/fav pic! copy.jpeg">
+        <img src="images/fav pic! copy.jpeg" id="personal-pic">
         <!-- Mission Statement -->
         <h2>Feel the fear, and <strong>DO IT ANYWAY!</strong></h2>
 
