--- a/portfolio.html
+++ b/portfolio.html
@@ -1,8 +1,16 @@
 <html>
     <head>
         <title>Projects</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <!-- nav bar -->
+        <nav> 
+            <a href="index.html" id="home">Home</a>
+            <a href="about.html" id="about">About</a>
+            <a class="active" href="portfolio.html" id="portfolio">Portfolio</a>
+        </nav> 
+
         <div id="pheading">
         <h1>The Coolest Projects!</h1>
         <p> A collection of projects I have worked on so far!</p>
@@ -11,19 +19,19 @@
         <div id="p1">
         <h2>Project #1</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vel mauris in libero hendrerit finibus. Fusce id neque tincidunt, viverra lacus quis, posuere erat. Sed id quam dui. Vestibulum luctus, ante eu aliquet consequat, felis magna maximus dui, ac feugiat elit purus nec tellus.</p>
-        <img>
+        <img src="images/coding1.jpg" id="p1pic">
         </div>
 
         <div id="p2">
             <h2>Project #2</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vel mauris in libero hendrerit finibus. Fusce id neque tincidunt, viverra lacus quis, posuere erat. Sed id quam dui. Vestibulum luctus, ante eu aliquet consequat, felis magna maximus dui, ac feugiat elit purus nec tellus.</p>
-            <img>
+            <img src="images/coding2.jpg" id="p2pic">
         </div>
 
         <div id="p3">
             <h2>Project #3</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vel mauris in libero hendrerit finibus. Fusce id neque tincidunt, viverra lacus quis, posuere erat. Sed id quam dui. Vestibulum luctus, ante eu aliquet consequat, felis magna maximus dui, ac feugiat elit purus nec tellus.</p>
-            <img>
+            <img src="images/coding3.jpg" id="p3pic">
         </div>
 
     </body>
