javascript file updated

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <title>Raina's Personal Website</title>
         <link rel="stylesheet" href="style.css">
+        <script src="javascript.jss"></script>
     </head>
     <body>
 
