created a contact page

--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
             <a href="index.html" id="home">Home</a>
             <a class="active" href="about.html" id="about">About</a>
             <a href="portfolio.html" id="portfolio">Portfolio</a>
+            <a href="contact.html" id="contact">Contact Me</a>
         </nav>
 
         <h1>Get To Know Me</h1>
