--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <a class= "active" href="index.html" id="home">Home</a>
             <a href="about.html" id="about">About</a>
             <a href="portfolio.html" id="portfolio">Portfolio</a>
+            <a href="contact.html" id="contact">Contact Me</a>
         </nav>
 
     <!-- Home Page -->
