--- a/portfolio.html
+++ b/portfolio.html
@@ -9,6 +9,7 @@
             <a href="index.html" id="home">Home</a>
             <a href="about.html" id="about">About</a>
             <a class="active" href="portfolio.html" id="portfolio">Portfolio</a>
+            <a href="contact.html" id="contact">Contact Me</a>
         </nav> 
 
         <div id="pheading">
